# FletifyHTML

./: LICENSE  README.md  example.py  main.py  pyproject.toml  requirements.txt  setup.py
FletifyHTML/: converter.py  html_parser.py  parser.py
fletify/: __init__.py  converter.py  parser.py  utils.py
