[project]
name = "Fletify"
version = "0.0.1"
authors = [
  { name="Benit Mulindwa", email="mulindwabenit@gmail.com" },
]
description = "Embed HTML code on your flet app"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Benitmulindwa/FletifyHTML"
Issues = "https://github.com/Benitmulindwa/FletifyHTML/issues"
